# yet-another-cv-project

./: .gitignore  CMakeLists.txt  README.md
classifier/: CMakeLists.txt
classifier/src/: CMakeLists.txt  Classifier.cpp  Classifier.h  main.cpp  util.cpp  util.h
classifier/test/: CMakeLists.txt  ClassifierTest.cpp  main.cpp
parser/: CMakeLists.txt  CSVParser.cpp  CSVParser.h  main.cpp
resources/: cascade.xml
